<resources>
    <string name="app_name">Ocean Pro To‑Do</string>
    <string name="hint_add_task">Add a task</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="completed">Completed</string>
    <string name="topbar_title">To‑Do</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
